fix: set z-Index for Navbar

--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -5,6 +5,7 @@
     flex-direction: row;
     background-color: #24292e;
     width: 100%;
+    z-index: 999;
 }
 
 .navbar a {
